--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ insert_final_newline=true
 max_line_length=100
 trim_trailing_whitespace=true
 
-[*.{md}]
+[*.{md,yml}]
 indent_size=2
 max_line_length=100
