--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,3 +1,8 @@
+commit-msg:
+  commands:
+    "check commit message":
+      run: cog verify --file {1}
+
 pre-commit:
   parallel: true
   commands:
